--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://b79703e7-e8c2-4c41-97bd-90f9d58a6262.preview.emergentagent.com
 WDS_SOCKET_PORT=443
